--- a/index.css
+++ b/index.css
@@ -381,3 +381,11 @@ body {
   left: auto;
   right: 5px;
 }
+
+/*MINE*/
+
+.paragraph {
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #fff;
+}
