--- a/index.css
+++ b/index.css
@@ -389,3 +389,24 @@ body {
   font-size: 20px;
   color: #fff;
 }
+
+.logo:hover {
+  transform: scale(
+    3
+  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  position: relative;
+  top: -50px;
+  left: 50px;
+}
+
+.logo2 {
+  left: 550px;
+}
+.logo2:hover {
+  transform: scale(
+    3
+  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  position: relative;
+  top: -50px;
+  left: -50px;
+}
